error.txt
C:\Users\rossy\Downloads\paquete-final\centro-diagnostico-v8\routes\configuracion.js:50
    }
    ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.1
